<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >
    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tyson"
        />
    <TextView
        android:id="@+id/citation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$'Entrainer avec les Meilleur$"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"

        />
    <TextView
        android:id="@+id/citation_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pour Devenir Meilleur ! "
        android:layout_below="@+id/citation"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/pseudo_tv"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:text="@string/pseudo"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="10dp"
        android:layout_marginLeft="57dp"
        android:layout_below="@+id/img_login"
        />

    <EditText
        android:id="@+id/pseudo_et"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/pseudo_tv"
        android:layout_below="@+id/img_login"
        />
    <TextView
        android:id="@+id/mot_de_passe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe"
        android:layout_below="@id/pseudo_et"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <EditText
        android:id="@+id/mot_de_passe_et"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pseudo_et"
        android:layout_toEndOf="@id/mot_de_passe_tv"
        android:padding="20dp"
        />
    <CheckBox
        android:id="@+id/se_souvenir_de_moi_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mot_de_passe_et"
        android:text="@string/se_souvenir_de_moi"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/se_connecter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_connecter"
        android:layout_below="@id/se_souvenir_de_moi_cb"
        />
</RelativeLayout>