<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilViewActivity">

    <ImageView
        android:id="@+id/img_scorpion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/scorpion"
        android:padding="20dp"
        android:layout_marginStart="230dp"
        android:contentDescription="@string/app_name"/>


    <TextView
        android:id="@+id/mon_profil_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mon_profil"
        android:textAppearance="?android:textAppearanceLarge"
        android:padding="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="10dp"
        />

<ImageView
    android:id="@+id/gants_puce"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/gants"
    android:layout_below="@+id/mon_profil_tv"
    android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/main_forte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Droitier"
        android:layout_marginLeft="40dp"
        android:layout_below="@+id/mon_profil_tv"
        />

    <ImageButton
        android:id="@+id/btn_ma_liste_enchainements"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_below="@+id/main_forte"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/ma_liste_enchainements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ma_liste_enchainements"
        android:layout_below="@+id/main_forte"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="18dp"/>

    <FrameLayout
        android:id="@+id/fragment_mon_profil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="173dp"/>


</RelativeLayout>